Another potential fix for the horizontal scrolling issue

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -33,6 +33,7 @@
 
 body {
 	background: #eee;
+  overflow-x: hidden;  // disable horizontal scrolling on mobile.
   [role="complementary"] {
     width: 25%;
     .three, .row .three {
